<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/w1"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_whatsapp" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Nome"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="9dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txtUserPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:hint="Senha"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/txtAlreadyAccount"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/alreadyAccount"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="15dp"
            android:text="@string/btn_text"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGoogle"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:padding="14dp"
                android:text="Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="14dp"
                android:text="Facebook"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignUpPhone"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:text="Registre-se com seu telefone"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFooter"
            android:layout_marginTop="28dp"
            android:text="By DeW-ill"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"
            />

    </LinearLayout>



</LinearLayout>
